syntax = "proto3";

package astria.sequencerblock.v1;

import "astria/primitive/v1/types.proto";
import "astria/sequencerblock/v1/block.proto";
import "astria/upgrades/v1/upgrades.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

message GetSequencerBlockRequest {
  // The height of the block to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetFilteredSequencerBlockRequest {
  // The height of the block to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
  // The 32 bytes identifying a rollup. Usually the sha256 hash of a plain rollup name.
  repeated astria.primitive.v1.RollupId rollup_ids = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetPendingNonceRequest {
  // The account to retrieve the pending nonce for.
  astria.primitive.v1.Address address = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetPendingNonceResponse {
  // The pending nonce for the given account.
  uint32 inner = 1;
}

message GetUpgradesInfoRequest {}

message GetUpgradesInfoResponse {
  repeated astria.upgrades.v1.ChangeInfo applied = 1;
  repeated astria.upgrades.v1.ChangeInfo scheduled = 2;
}

service SequencerService {
  // Given a block height, returns the sequencer block at that height.
  rpc GetSequencerBlock(GetSequencerBlockRequest) returns (SequencerBlock) {
    option (google.api.http) = {get: "/v1/sequencer/{height}"};
  }

  // Given a block height and set of rollup ids, returns a SequencerBlock which
  // is filtered to contain only the transactions that are relevant to the given rollup.
  rpc GetFilteredSequencerBlock(GetFilteredSequencerBlockRequest) returns (FilteredSequencerBlock) {
    option (google.api.http) = {
      post: "/v1/sequencer/{height}:filtered"
      body: "*"
    };
  }

  // Returns the pending nonce for the given account.
  rpc GetPendingNonce(GetPendingNonceRequest) returns (GetPendingNonceResponse) {
    option (google.api.http) = {get: "/v1/sequencer/pendingnonce/{account}"};
  }

  // Returns info about the sequencer upgrades applied and scheduled.
  rpc GetUpgradesInfo(GetUpgradesInfoRequest) returns (GetUpgradesInfoResponse) {
    option (google.api.http) = {get: "/v1/sequencer/upgrades"};
  }
}
